--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
   </div>
 
   <script src="js/script.js"></script>
+  
   <script>
-    const user = localStorage.getItem("user");
-    if (!user) {
-      window.location.href = "login.html";
-    }
+    document.addEventListener('DOMContentLoaded', function() {
+      const user = localStorage.getItem("user");
+      if (!user) {
+        window.location.href = "login.html";
+      }
+    });
   </script>
+
 </body>
 </html>
