--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TrendyCart</title>
-
-  <script>
-    const user = localStorage.getItem("user");
-    if (!user) {
-      window.location.href = "login.html";
-    }
-  </script>
-
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -38,7 +30,8 @@
   </div>
 
   <div class="container">
-    <div class="row" id="product-list"></div>
+    <div class="row" id="product-list">
+    </div>
   </div>
 
   <script src="js/script.js"></script>
