--- a/index.html
+++ b/index.html
@@ -3,37 +3,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TrendyCart</title>
+  <title>Login - TrendyCart</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
+  <header>
+    <h1>Sign In to TrendyCart</h1>
+    <a href="home.html">← Back to Home</a>
+  </header>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">TrendyCart</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
-          <li class="nav-item"><a class="nav-link" href="wishlist.html">Wishlist</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <div class="form-container">
+    <form id="login-form">
+      <label for="email">Email:</label>
+      <input type="email" id="email" required placeholder="Enter your email" />
 
-  <div class="container my-4">
-    <div class="p-5 bg-light text-center rounded">
-      <h2>TrendyCart</h2>
-      <p>Shop the latest fashion trends with style and ease!</p>
-    </div>
+      <label for="password">Password:</label>
+      <input type="password" id="password" required placeholder="Enter your password" />
+
+      <button type="submit">Login</button>
+    </form>
   </div>
 
-  <div class="container">
-    <div class="row" id="product-list">
-    </div>
-  </div>
-
-  <script src="js/script.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
