--- a/index.html
+++ b/index.html
@@ -2,28 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - TrendyCart</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TrendyCart - Home</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
-<body>
-  <header>
-    <h1>Sign In to TrendyCart</h1>
-    <a href="home.html">← Back to Home</a>
+<body onload="checkAuth()">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">TrendyCart</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="wishlist.html">Wishlist</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" onclick="logout()">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Banner -->
+  <header class="bg-dark text-white text-center p-5">
+    <h1>Welcome to TrendyCart</h1>
+    <p>Discover the latest fashion. Grab the hottest deals.</p>
+    <p><strong>Flash Sale Ends In: <span id="countdown"></span></strong></p>
   </header>
 
-  <div class="form-container">
-    <form id="login-form">
-      <label for="email">Email:</label>
-      <input type="email" id="email" required placeholder="Enter your email" />
+  <!-- Product Section -->
+  <section class="container py-5">
+    <h2 class="mb-4">Featured Products</h2>
+    <div class="row" id="product-list">
+      <!-- Dynamic product cards will be injected here -->
+    </div>
+  </section>
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" required placeholder="Enter your password" />
-
-      <button type="submit">Login</button>
-    </form>
-  </div>
-
-  <script src="js/login.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
