--- a/wishlist.html
+++ b/wishlist.html
@@ -2,20 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wishlist - TrendyCart</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
 </head>
-<body>
-  <header>
-    <h1>My Wishlist</h1>
-    <a href="index.html">← Back to Home</a>
-  </header>
+<body onload="checkAuth()">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">TrendyCart</a>
+      <div class="collapse navbar-collapse">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="products.html">Products</a></li>
+          <li class="nav-item"><a class="nav-link active" href="wishlist.html">Wishlist</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" onclick="logout()">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-  <main id="wishlist-container" class="product-container">
-    <!-- Wishlist items will appear here -->
-  </main>
+  <section class="container py-5">
+    <h2 class="mb-4">My Wishlist</h2>
+    <div class="row" id="wishlist-container"></div>
+  </section>
 
+  <script src="js/auth.js"></script>
   <script src="js/wishlist.js"></script>
 </body>
 </html>
