--- a/index.html
+++ b/index.html
@@ -37,7 +37,37 @@
     </div>
   </section>
 
+  <!-- Login Choice Modal -->
+  <div id="loginModal" style="
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5); display: none; justify-content: center; align-items: center;
+    z-index: 9999;">
+    <div style="
+      background: white; padding: 20px; border-radius: 8px; text-align: center; max-width: 320px; width: 90%;">
+      <h3>Welcome to TrendyCart</h3>
+      <p>Do you want to log in for a better experience?</p>
+      <button onclick="window.location.href='login.html'" style="margin: 5px; padding: 8px 15px;">Login</button>
+      <button onclick="continueAsGuest()" style="margin: 5px; padding: 8px 15px;">Continue as Guest</button>
+    </div>
+  </div>
+
   <script src="js/script.js"></script>
   <script src="js/auth.js"></script>
+
+  <script>
+    window.onload = function() {
+      const guestContinued = localStorage.getItem('guestContinue');
+      const isLoggedIn = localStorage.getItem('isLoggedIn');
+
+      if (!guestContinued && isLoggedIn !== 'true') {
+        document.getElementById('loginModal').style.display = 'flex';
+      }
+    }
+
+    function continueAsGuest() {
+      localStorage.setItem('guestContinue', 'true');
+      document.getElementById('loginModal').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
