--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TrendyCart - Home</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
 </head>
-<body onload="checkAuth()">
+<body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container">
       <a class="navbar-brand fw-bold" href="#">TrendyCart</a>
@@ -37,36 +38,56 @@
     </div>
   </section>
 
-  <!-- Login Choice Modal -->
-  <div id="loginModal" style="
-    position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-    background: rgba(0,0,0,0.5); display: none; justify-content: center; align-items: center;
-    z-index: 9999;">
-    <div style="
-      background: white; padding: 20px; border-radius: 8px; text-align: center; max-width: 320px; width: 90%;">
-      <h3>Welcome to TrendyCart</h3>
-      <p>Do you want to log in for a better experience?</p>
-      <button onclick="window.location.href='login.html'" style="margin: 5px; padding: 8px 15px;">Login</button>
-      <button onclick="continueAsGuest()" style="margin: 5px; padding: 8px 15px;">Continue as Guest</button>
+  <!-- Login/Guest Modal -->
+  <div class="modal fade" id="loginGuestModal" tabindex="-1" aria-labelledby="loginGuestModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="loginGuestModalLabel">Welcome to TrendyCart</h5>
+        </div>
+        <div class="modal-body">
+          <p>Please login to enjoy all features or continue as a guest with limited access.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" id="guestBtn">Continue as Guest</button>
+          <button type="button" class="btn btn-primary" id="loginBtn">Login</button>
+        </div>
+      </div>
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
   <script src="js/auth.js"></script>
 
   <script>
-    window.onload = function() {
-      const guestContinued = localStorage.getItem('guestContinue');
-      const isLoggedIn = localStorage.getItem('isLoggedIn');
+    document.addEventListener("DOMContentLoaded", function () {
+      const user = localStorage.getItem("user");
+      const guest = localStorage.getItem("guestContinue");
 
-      if (!guestContinued && isLoggedIn !== 'true') {
-        document.getElementById('loginModal').style.display = 'flex';
+      if (!user && !guest) {
+        // Show modal if not logged in or guest
+        const loginGuestModal = new bootstrap.Modal(document.getElementById('loginGuestModal'));
+        loginGuestModal.show();
+
+        document.getElementById('loginBtn').addEventListener('click', () => {
+          loginGuestModal.hide();
+          window.location.href = 'login.html';
+        });
+
+        document.getElementById('guestBtn').addEventListener('click', () => {
+          localStorage.setItem("guestContinue", "true");
+          loginGuestModal.hide();
+          // Optionally, show an alert or welcome message
+          alert("You are continuing as a guest. Some features may be limited.");
+        });
       }
-    }
+    });
 
-    function continueAsGuest() {
-      localStorage.setItem('guestContinue', 'true');
-      document.getElementById('loginModal').style.display = 'none';
+    function logout() {
+      localStorage.removeItem("user");
+      localStorage.removeItem("guestContinue");
+      window.location.href = "login.html";
     }
   </script>
 </body>
